tests/lean/bad_print.lean.expected.out
bad_print.lean:3:18: error: invalid '#print definition', 'boo' is not a definition
bad_print.lean:5:7: error: invalid '#print' command
bad_print.lean:7:14: error: invalid '#print fields' command, 'nat' is not a structure
